traversal.snake.Snake.scala.error
Compilation error:
Snake:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  getDirection match{
  ^